--- a/kc_lean_init.org
+++ b/kc_lean_init.org
@@ -723,16 +723,17 @@ A package to rename or hide both major mode and minor mode names in the mode-lin
 (use-package dired
   :general
   (:states '(normal insert)
-	   :keymaps 'dired-mode-map
-	   "h" #'dired-up-directory
-	   "l" #'dired-find-file
-	   )
+	       :keymaps 'dired-mode-map
+	       "h" #'dired-up-directory
+	       "l" #'dired-find-file
+	       )
 
   :config
   (setq dired-use-ls-dired t)
   (setq insert-directory-program "~/homebrew/bin/gls")
   (setq dired-listing-switches "-ahl -v --group-directories-first -A -t") ;; -A hides the . and .. in directory listing
   (setq dired-dwim-target t)
+  (setq dired-kill-when-opening-new-dired-buffer t)
   )
 #+end_src
 ** Diredfl
